oxiplate-derive/tests/broken/numbers/bad-hex.stderr
error: At least one digit expected after alternative base prefix
 --> tests/broken/numbers/bad-hex.rs:4:23
  |
4 | #[oxiplate_inline("{{ 0x }}")]
  |                       ^^
